@@ -67,7 +67,7 @@ PWIZOBJECTS=\
 
 MZROBJECTS=cramp.o  ramp_base64.o  ramp.o  RcppRamp.o RcppRampModule.o rnetCDF.o
 
-OBJECTS= $(MZROBJECTS) $(PWIZOBJECTS) 
+OBJECTS= $(MZROBJECTS) $(PWIZOBJECTS) rampR.o
 
 PWIZ_LDFLAGS=-lpthread 
 PWIZ_CPPFLAGS=-I./boost_aux/ -I. -DHAVE_PWIZ_MZML_LIB
